fix(examples): fix code block, bg contrast

--- a/website/src/global.scss
+++ b/website/src/global.scss
@@ -17,8 +17,8 @@
 
   color-scheme: light;
 
-  --theme-bg: #FEF3C7;
-  --theme-bg-alt: #f9eab3;
+  --theme-bg: #fbf4d9;
+  --theme-bg-alt: #fff5d1;
   --theme-border: #eaddae;
   --theme-text: #451A03;
   --theme-accent: #ec7f26;
